Added a UserService to follow/unfollow other users + some refactor on Pages